--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h2::selection{
     width: 33.33%;height: 100%;
     display: flex;align-items: center;justify-content: center;
     border: 1px solid #2F5755;
-    font-size: 7vw;
+    font-size: 350%;
     cursor: pointer;
     border-radius: 10px;
     color: #0f1d1c;
