--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
     font-family: serif;
 }
 html,body{
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     display: flex;flex-direction: column; align-items: center;justify-content: center;gap: 50px;
     background: #264745;
     color: #3a6b69;
